--- a/ch05-functions/ex03.md
+++ b/ch05-functions/ex03.md
@@ -11,3 +11,21 @@ Enter the second number: 2.718281828459045
 
 ## Solution
 
+```javascript
+// multiply.js
+
+let rlSync = require('readline-sync');
+
+function getNumber(prompt) {
+  return Number(rlSync.question(prompt));
+}
+
+let a = getNumber('Enter first number: ');
+let b = getNumber('Enter second number: ');
+
+function multiply(a, b) {
+  return a * b  
+}
+
+console.log(`${a} * ${b} = ${multiply(a , b)}`);
+```
